add utterances comment plugin

--- a/pelican-bootstrap3/templates/article.html
+++ b/pelican-bootstrap3/templates/article.html
@@ -87,6 +87,17 @@
                 </div>
                 {{ article.content }}
             </div>
+
+            <!-- Utterances comments script -->
+            <script src="https://utteranc.es/client.js"
+                repo="xshi19/xshi19.github.io"
+                issue-term="pathname"
+                label="comment"
+                theme="github-light"
+                crossorigin="anonymous"
+                async>
+            </script>
+            
             <!-- /.entry-content -->
             {% include 'includes/related-posts.html' %}
             {% include 'includes/series.html' %}
